installdir = $(pkgdatadir)/rc_models

dist_install_DATA = \
	rc_models.cfg \
	amiko.png \
	amiko.xml \
	dmm.png \
	dmm.xml \
	dmmadv.png \
	dmmadv.xml \
	edision1.png \
	edision1.xml \
	edision2.png \
	edision2.xml \
	edision3.png \
	edision3.xml \
	et4x00.png \
	et4x00.xml \
	et6x00.png \
	et6x00.xml \
	et7000mini.png \
	et7000mini.xml \
	et7x00.png \
	et7x00.xml \
	et8000.png \
	et8000.xml \
	et9500.png \
	et9500.xml \
	et9x00.png \
	et9x00.xml \
	formuler1.png \
	formuler1.xml \
	gb7252.png \
	gb7252.xml \
	hd-gen.png \
	hd-gen.xml \
	hd2400.png \
	hd2400.xml \
	i55.png \
	i55.xml \
	ixussone.png \
	ixussone.xml \
	ixusszero.png \
	ixusszero.xml \
	miraclebox.png \
	miraclebox.xml \
	miraclebox2.png \
	miraclebox2.xml \
	octagon.png \
	octagon.xml \
	osmini.png \
	osmini.xml \
	revo4k.png \
	revo4k.xml \
	sab.png \
	sab.xml \
	sh1.png \
	sh1.xml \
	spycat.png \
	spycat.xml \
	vu.png \
	vu.xml \
	vu2.png \
	vu2.xml \
	vuduo2.png \
	vuduo2.xml \
	vuultimo.png \
	vuultimo.xml \
	wetekplay.png \
	wetekplay.xml \
	xp1000.png \
	xp1000.xml \
	xpeedlx.png \
	xpeedlx.xml \
	xsarius.png \
	xsarius.xml \
	zgemma.png \
	zgemma.xml
